--- a/package.json
+++ b/package.json
@@ -1,25 +1,17 @@
 {
   "name": "news-explorer-frontend",
   "version": "0.1.0",
+  "homepage": "https://news.nitsnats.mooo.com",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.2.3",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
-    "@types/react-router-dom": "^5.3.3",
-    "axios": "^1.2.0",
-    "intl": "^1.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^5.3.3",
-    "react-scripts": "5.0.1",
-    "validator": "^13.9.0",
+    "react-router-dom": "^6.6.2",
+    "react-scripts": "^5.0.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,8 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "lint": "rm -rf ./build && eslint --ext .js,.jsx,.ts,.tsx --fix ./src"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,14 +41,6 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
-    "eslint": "^8.28.0",
-    "eslint-config-airbnb-typescript-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.32.2",
-    "standardx": "^3.0.0",
-    "typescript": "^4.9.3",
     "gh-pages": "^4.0.0"
   }
 }
