--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build": "react-scripts build",
-    "deploy": "gh-pages -d build"
+    "deploy": "cross-env NODE_ENV=production gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
