--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build &&  scp -r ./build/* nitsnats@news.nitsnats.mooo.com:/home/nitsnats/news-explorer-frontend"
+    "deploy": "npm run build &&  scp -r ./build/* nitsnats@34.31.29.151:/home/nitsnats/news-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
