--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "news-explorer-frontend",
   "version": "0.1.0",
-  "homepage": "https://news.nitsnats.mooo.com",
+  "homepage": "/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
