--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "news-explorer-frontend",
   "version": "0.1.0",
+  "main": "index.js",
   "homepage": "https://news.nitsnats.mooo.com",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "isexe": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
@@ -19,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
