--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && scp -r ./build/* nitsnats@104.154.254.83:/home/nitsnats/news-explorer-frontend"
   },
   "eslintConfig": {
     "extends": [
